--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -7,25 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ['3.8', '3.9', '3.10']
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-        pip install -r requirements.txt  # Install other dependencies if any
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
 
-    - name: Lint the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+      - name: Lint the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
 
-    - name: Run tests
-      run: |
-        python -m unittest discover
+      - name: Run tests
+        run: |
+          python -m unittest discover
