--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -21,6 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt  # Install other dependencies if any
 
-      - name: Run tests
+      - name: Run tests for calculator
+        working-directory: calculator
         run: |
           python -m unittest discover
